Changed color for text and checkbox, added both checkbox icons (completed and not completed), fixed font-size | Alignment of ToDoItem Elements

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @import 'tailwindcss';
 
 @theme {
-  --color-text: hsl(221 25% 27%);
+  --color-text: hsl(200 30% 26%);
   --color-background: hsl(240 20% 99%);
   --color-primary: hsl(229 86% 70%);
-  --color-secondary: hsl(211 100% 94%);
+/*  --color-secondary: hsl(200 30% 26%);*/
   --color-accent: hsl(354 83% 66%);
 }
 
